Fix contact layout on mobile

--- a/style/comingsoon.css
+++ b/style/comingsoon.css
@@ -196,7 +196,19 @@ p {
     font-style: italic;
     font-size: 1.2em;
     text-align: center;
-    margin-left: -13%;
+    margin: 0 auto;
+    }
+
+    #sos-left {
+    text-align: left !important;
+    }
+
+    #sos-center {
+    text-align: left !important;
+    }
+
+    #sos-right {
+    text-align: left !important;
     }
 }
 
